--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
        
         
     - name: deploy Surge 
-      run: Surge ./ build http://alibaba22.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+      run: Surge ./ build http://zeeshan2.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
        
        
         
